<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <TextView
        android:id="@+id/login_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/login_txt"
         />

    <EditText
        android:id="@+id/login_box"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:textAlignment="center"
        android:background="@drawable/edit_text_background"
        />

    <TextView
        android:id="@+id/pass_txt"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_txt" />

    <EditText
        android:id="@+id/pass_box"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:maxLength="8"
        android:background="@drawable/edit_text_background"
        />

    <Button
        android:id="@+id/valid_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:text="@string/valid_btn"
        android:background="@drawable/ring_ripple"
        />

    <Button
        android:id="@+id/register_btn"
        android:text="@string/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ring_ripple"
        />

</LinearLayout>
