<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/login_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:text="@string/login_txt" />

    <EditText
        android:id="@+id/login_box"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:background="@drawable/edit_text_background"
        android:textAlignment="center"

        />

    <TextView
        android:id="@+id/name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:text="@string/name_txt" />

    <EditText
        android:id="@+id/name_box"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:background="@drawable/edit_text_background"
        android:textAlignment="center"

        />

    <TextView
        android:id="@+id/pass_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:text="@string/pass_txt" />

    <EditText
        android:id="@+id/pass_box"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:background="@drawable/edit_text_background"
        android:inputType="textPassword"
        android:maxLength="8"
        android:textAlignment="center" />

    <Button
        android:id="@+id/inscr_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:background="@drawable/ring_ripple"
        android:clickable="true"
        android:elevation="@dimen/elevation_high"
        android:text="@string/inscr_btn" />


    <Button
        android:id="@+id/retour_btn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:background="@drawable/ring_ripple"
        android:clickable="true"
        android:elevation="@dimen/elevation_high"
        android:text="@string/retour_btn" />

</LinearLayout>